--- a/frontend/src/pages/timeline/components/timelineRow.scss
+++ b/frontend/src/pages/timeline/components/timelineRow.scss
@@ -1,4 +1,4 @@
-.tlProjectRow {
+.timelineRow {
   display: flex;
   align-items: center;
   padding: 0 16px;
